--- a/css/iphone.css
+++ b/css/iphone.css
@@ -48,11 +48,7 @@ nav main a{
 nav main a:hover,.nav-icon:hover{
     color:lightgrey;
 }
-.nav-big a span.nav-icon{
-    color: white;
-    font-size:20px;
-}
-.nav-small a span.nav-icon{
+.nav-big a span.nav-icon,.nav-small a span.nav-icon{
     color: white;
     font-size:20px;
 }
@@ -63,7 +59,7 @@ nav main a:hover,.nav-icon:hover{
 .banner{
     width: 100%;
     height: 500px;
-    /*background: yellow;*/
+    background: yellow;
     position: relative;
 }
 .banner-txt{
@@ -99,7 +95,7 @@ nav main a:hover,.nav-icon:hover{
 .img-list{
     width: 100%;
     height: auto;
-    /*background: yellow;*/
+    background: yellow;
     display: flex;
     flex-wrap: wrap;
     /*overflow: hidden;*/
